--- a/assets/scss/elements/_block.scss
+++ b/assets/scss/elements/_block.scss
@@ -416,6 +416,31 @@
     }
 }
 
+.ps-filter--armar{
+    display: inline-flex;
+    flex-flow: row nowrap;
+        a{   
+            // float:left;
+            display:flex;
+            margin-right: 10px;
+            margin-bottom: 10px;
+            font-size: 15px;
+            padding: 6px 20px;
+            border-radius: 50px;
+            font-weight: 500;
+            border: 1px solid #fcb800;
+            color: #000;
+        }
+
+        a:hover{
+        color:#fcb800;
+        background-color: #13120f;
+       
+    
+}
+};
+
+
 .ps-block--countdown-deal {
     display: flex;
     flex-flow: row nowrap;
@@ -970,7 +995,7 @@
             }
 
             &:hover {
-                span {
+                span{
                 }
 
                 img {
@@ -2600,7 +2625,7 @@
 .ps-block--vendor {
     .ps-block__divider {
         display: block;
-        padding-top: 16px;
+        padding-top: 10px;
         margin-bottom: 16px;
         border-bottom: 1px solid #d5d5d5;
     }
@@ -2613,10 +2638,11 @@
 
     .ps-block__container {
         padding: 25px;
-        background-color: #f1f1f1;
+        background-color: #f8f8f8;
 
         .ps-block__header {
             h4 {
+                text-align: center;
                 font-size: 20px;
                 color: $color-heading;
                 font-weight: 500;
