--- a/assets/scss/elements/_list.scss
+++ b/assets/scss/elements/_list.scss
@@ -279,7 +279,13 @@
         }
     }
 }
+// .ps-fliter{
 
+//     a{
+//         display: block;
+//         line-height: 22px;
+//     }
+// }
 .ps-list--categories {
     li {
         position: relative;
