--- a/assets/scss/elements/_product.scss
+++ b/assets/scss/elements/_product.scss
@@ -188,7 +188,7 @@
             top: 100%;
             right: -1px;
             width: calc(100% + 2px);
-            padding: 60px 20px 20px;
+            padding: 0 20px 20px;
             border: 1px solid rgb(192, 192, 192);
             border-top: none;
             @include hidden;
