--- a/assets/scss/elements/_breadcrumb.scss
+++ b/assets/scss/elements/_breadcrumb.scss
@@ -1,6 +1,6 @@
 .ps-breadcrumb {
     padding: 20px 0;
-    background-color: #f1f1f1;
+    background-color: #ffffff;
 
     .breadcrumb {
         display: inline-block;
