arreglando adicion de vista

--- a/assets/scss/components/_cart.scss
+++ b/assets/scss/components/_cart.scss
@@ -58,6 +58,10 @@
                 color: red;
             }
         }
+        i{
+            font-size: 15px;
+            justify-content: center;
+        }
     }
 
     figure {
