--- a/assets/scss/elements/_block.scss
+++ b/assets/scss/elements/_block.scss
@@ -3357,6 +3357,10 @@
                     color: $color-1st;
                 }
             }
+            i{
+                font-size: 18px;
+                justify-content: center;
+            }
         }
     }
 
