--- a/assets/scss/components/_menu.scss
+++ b/assets/scss/components/_menu.scss
@@ -154,8 +154,8 @@
 
         > a {
             display: inline-block;
-            padding: 15px 25px;
-            font-size: 16px;
+            padding: 20px 25px 15px 40px;
+            font-size: 18px;
             font-weight: 400;
             line-height: 20px;
             color: $color-heading;
@@ -286,9 +286,9 @@
         }
 
         span {
-            font-size: 20px;
+            font-size: 17px;
             color: $color-heading;
-            font-size: 16px;
+            // font-size: 16px;
             font-weight: 600;
         }
 
