--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -24,8 +24,8 @@
   }
   
   body {
-    // font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    //   Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+      Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: var(--bg);
     color: var(--color);
     transition: background-color 0.3s;
