--- a/assets/scss/elements/_product.scss
+++ b/assets/scss/elements/_product.scss
@@ -873,7 +873,7 @@
 
         .ps-btn--gray {
             background-color: rgba(#000, 0.5);
-            color: #ffffff;
+            color: black;
         }
 
         .ps-product__favorite {
