--- a/assets/scss/components/_forms.scss
+++ b/assets/scss/components/_forms.scss
@@ -86,6 +86,10 @@
         padding: 0 24px;
         border-radius: 0 4px 4px 0;
     }
+    i{
+        font-size: 20px;
+    justify-items: center ;
+    }
 
     .ps-panel--search-result {
         position: absolute;
