--- a/assets/scss/components/_cart.scss
+++ b/assets/scss/components/_cart.scss
@@ -60,7 +60,7 @@
         }
         i{
             font-size: 19px;
-            justify-content: center;
+            // justify-self: center;
         }
     }
 
